# IPP-SaR

./: README.md
tmplanner_continuous/: CMakeLists.txt  CMakeLists_not.txt  package.xml
tmplanner_continuous/include/tmplanner_continuous/: grid_map.h  lattice.h  logger.h  tmplanner.h  tmplanner_node.h
tmplanner_continuous/launch/: monitoring_example.launch  tmplanner.launch  tmplanner_random_sampling.launch
tmplanner_continuous/parameters/: coverage_goals.yaml  tmplanner.yaml  tmplanner_random_sampling.yaml
tmplanner_continuous/src/: grid_map.cpp  lattice.cpp  tmplanner.cpp
tmplanner_continuous/src/node/: tmplanner_node.cpp
tmplanner_continuous/src/test/: simulate_cmaes.py  simulate_coverage_planner.py  test_time.py
tmplanner_discrete/: CMakeLists.txt  package.xml
tmplanner_discrete/include/tmplanner_discrete/: grid_map.h  lattice.h  logger.h  tmplanner.h  tmplanner_node.h
tmplanner_discrete/launch/: monitoring_example.launch  tmplanner.launch
tmplanner_discrete/parameters/: tmplanner.yaml
tmplanner_discrete/src/: grid_map.cpp  lattice.cpp  tmplanner.cpp
tmplanner_discrete/src/node/: tmplanner_node.cpp
tmplanner_discrete/src/test/: record_odometry_bag.cpp  simulate_cmaes.py
tmplanner_tools/: CMakeLists.txt
tmplanner_tools/sim/descriptions/models/: factory.cc
tmplanner_tools/sim/descriptions/models/apartment/: model.sdf
tmplanner_tools/sim/descriptions/models/box/: box.sdf  model.config
tmplanner_tools/sim/descriptions/models/box/materials/scripts/: box.material
tmplanner_tools/sim/descriptions/models/cylinder/: cylinder.sdf  model.config
tmplanner_tools/sim/descriptions/models/house_2/: model.sdf
tmplanner_tools/sim/descriptions/models/house_3/: model.sdf
tmplanner_tools/sim/descriptions/models/reactor/: model.sdf
tmplanner_tools/sim/descriptions/models/tower_crane/: model.sdf
tmplanner_tools/sim/launch/: mav_camera_sim.launch
tmplanner_tools/sim/worlds/: blobs_continuous.world  tags_discrete.world
